犬情報リソース追加
