# app/api/controllers/model.py
@@ -3,3 +3,7 @@ from pydantic import BaseModel
 
 class Message(BaseModel):
     detail: str
+
+
+class EmptyResponse(BaseModel):
+    pass
