# app/api/router.py
@@ -1,5 +1,13 @@
-from app.api.controllers import owner_controller
 from fastapi import APIRouter
 
+from app.api.controllers import dog_controller, owner_controller
+
 router = APIRouter()
-router.include_router(owner_controller.router, prefix="/owners", tags=["owner"])
+router.include_router(
+    owner_controller.router,
+    prefix="/owners",
+    tags=["owner"],
+)
+router.include_router(
+    dog_controller.router, prefix="/owners/{owner_id}/dogs", tags=["dogs"]
+)
